--- a/09-ObjectsAssignment/index.html
+++ b/09-ObjectsAssignment/index.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>09-ObjectsAssignment</title>
-    <script src="libraries/p5.js" type="text/javascript"></script>
 
-    <script src="libraries/p5.dom.js" type="text/javascript"></script>
-    <script src="libraries/p5.sound.js" type="text/javascript"></script>
+<head>
+  <meta charset="UTF-8">
+  <title>09-ObjectsAssignment</title>
+  <script src="libraries/p5.js" type="text/javascript"></script>
 
-    <script src="sketch.js" type="text/javascript"></script>
-    <script src="Fireworks.js" type="text/javascript"></script>
+  <script src="libraries/p5.dom.js" type="text/javascript"></script>
+  <script src="libraries/p5.sound.js" type="text/javascript"></script>
 
-    <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
-  </head>
-  <body>
-  </body>
+  <script src="sketch.js" type="text/javascript"></script>
+  <script src="Fireworks.js" type="text/javascript"></script>
+  <script src="Sparkles.js" type="text/javascript"></script>
+
+
+  <style>
+    body {
+      padding: 0;
+      margin: 0;
+    }
+    
+    canvas {
+      vertical-align: top;
+    }
+  </style>
+</head>
+
+<body>
+</body>
+
 </html>
