--- a/11-HTML_DOM/index.html
+++ b/11-HTML_DOM/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>09-ObjectsAssignment</title>
+  <title>11-HTML_DOM</title>
   <script src="libraries/p5.js" type="text/javascript"></script>
 
   <script src="libraries/p5.dom.js" type="text/javascript"></script>
